# darling-libdispatch

./: CMakeLists.txt  README.md
config/: config.h
include/dispatch/: base.h  benchmark.h  block.h  config.h  data.h  data_private.h  dispatch.h  group.h  io.h  io_private.h  layout_private.h  mach_private.h  object.h  once.h  queue.h  queue_private.h  semaphore.h  source.h  source_private.h  time.h
include/os/: firehose_buffer_private.h  firehose_server_private.h  linux_base.h  object_private.h  voucher_activity_private.h  voucher_private.h
os/: object.h  object_private.h
src/: inline_internal.h  object.m  object_internal.h  objectm.m  protocol.defs  queue.c  queue_internal.h  source.c  workgroup.c
src/firehose/: firehose_reply.defs
src/shims/: atomic.h
tests/: CMakeLists.txt  dispatch_test.h
tests/darling/: run-all.sh.in  run-single.sh
